[package]
name = "cr_tile_game"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
serde = {version = "1.0.164", features = ["derive"]}
rand = "0.8.5"
cr_tile_game_service = { path = "../cr_tile_game_service" }
serde_json = "1.0.97"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12" # for adding program icon to compiled binary
