[package]
name = "cr_tile_game"
version = "0.2.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "0.4.2", features = ["audio"] }
serde = {version = "1.0.164", features = ["derive"] }
rand = "0.8.5"
serde_json = "1.0.97"
cr_tile_game_common = { path = "../cr_tile_game_common" }
cr_program_settings = "0.1.2"
#rayon = "1.7.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12" # for adding program icon to compiled binary

[build-dependencies]
vergen = { version = "8.1.1", features = ["build","git","gitcl"] }
