[package]
name = "cr_tile_game_common"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"
smol_db_client = { git = "https://github.com/CoryRobertson/smol_db.git" }
