[package]
name = "cr_tile_game_service"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"
cr_tile_game_common = { path = "../cr_tile_game_common" }
smol_db_client = "1.0.0"
